--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,19 @@
-<p>header works!</p>
+<table>
+    <tr>
+      <td>
+        <p>Zurisaddai Reyes Juarez</p>
+        <p>Licenciatura en Ingenieria de SW</p>
+      </td>
+      <td>
+        <img src="../assets/Perfil.jpg" width="100" height="100">
+      </td>
+      <td>
+        <ul>
+          <li>zuleyma.juarez_2002@hotmail.com</li>
+          <li>2712549895</li>
+          <li>Cordoba, Veracruz</li>
+          <li>@ZurisaddaiRJ</li>
+        </ul>
+      </td>
+    </tr>
+  </table>
